# live2d

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  SDK_README.md  build_demo.ps1  build_xtk.bat  build_xtk.ps1  compile_shaders.ps1  renderer_config.json  requirements.txt  run_demo.ps1  test_render.py
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  initialize.cmd  initialize.sh  post-create.sh
assets/models/: registry.json
assets/models/majo/: HANDOVER.md  Scene1.motion3.json  audit.md  majo.512.model3.json  majo.lowres.model3.json  majo.model3.json
assets/models/majo/expressions/: angry.exp3.json  bored.exp3.json  contemptuous.exp3.json  curious.exp3.json  curious_v0.exp3.json  curious_v1.exp3.json  embarrassed.exp3.json  embarrassed_v0.exp3.json  embarrassed_v1.exp3.json  grave.exp3.json  happy.exp3.json  hushed.exp3.json  neutral.exp3.json  sad.exp3.json  surprised.exp3.json  wry.exp3.json
assets/models/majo/motions/: README.md  address.motion3.json  consult.motion3.json  glance_down.motion3.json  lean_in.motion3.json  look_away.motion3.json  look_away_v0.motion3.json  look_away_v1.motion3.json  nod.motion3.json  nod_review.motion3.json  nod_soft.motion3.json  nod_v0.motion3.json  nod_v2.motion3.json  nod_v3.motion3.json  tap.motion3.json  tap_v1.motion3.json
assets/models/majo/review_log/: compliance_check.md  round_1.json  round_2.json  round_3.json  sable_r1.json
docs/: agent-team-spec.md  api-server-roadmap.md  api-server.md  authoring-guide.md  behaviour-authoring-workflow.md  breath-guard-findings.md  cli_design.md  devcontainer-git-identity.md  live2d-avatar-api-contract.md  model-onboarding.md  motion-definition.md  roadmap.md  vulkan-build-and-gpu.md
scripts/: behavior_review.py  consult_compare.py  consult_guard_comparison.py  consult_review.py  lean_in_review.py  look_away_review.py  round3_review.py  verify_build.py
server/: config.py  main.py  schemas.py
server/routers/: health.py  models.py  renders.py
server/services/: job_manager.py  registry.py  renderer.py
spec/v1/: avatar-behaviour-spec.json  avatar-behaviour-spec.md  behaviour-authoring-workflow.md
spec/v1/behaviour-examples/: README.md  combined_review.json  expression_angry.json  expression_bored.json  expression_curious.json  expression_embarrassed.json  expression_happy.json  expression_neutral.json  expression_sad.json  expression_serious.json  expression_surprised.json  reaction_look_away.json  reaction_nod.json  reaction_shake.json  reaction_tap.json
src/: CMakeLists.txt  allocator.cpp  allocator.h  main.cpp
src/cli/: args.cpp  args.h  logger.cpp  logger.h  manifest.cpp  manifest.h  model_resolver.cpp  model_resolver.h
src/gl_compat/GL/: glew.h
src/render/: cue_sequencer.cpp  cue_sequencer.h  ffmpeg_encoder.cpp  ffmpeg_encoder.h  lipsync_sequencer.cpp  lipsync_sequencer.h  live2d_model.cpp  live2d_model.h  offscreen_d3d11.cpp  offscreen_d3d11.h  offscreen_opengl.cpp  offscreen_opengl.h  offscreen_vulkan.cpp  offscreen_vulkan.h  render_loop.cpp  render_loop.h  renderer_config.cpp  renderer_config.h
tests/: render_review_all_motions.py  test_renderer_config.py
tests/fixtures/: 01_emotion_sweep.json  02_reaction_suite.json  03_gaze_and_head.json  04_lipsync_all_shapes.json  05_combined_scene.json  06_edge_cases.json  majo_01_emotion_sweep.json  majo_cue_test.json  majo_lipsync_test.json
tests/fixtures/breath_guard_review/: render_review.py  renderer_lerp_guard.cpp.snippet  renderer_no_guard.cpp.snippet
tests/fixtures/breath_speed_review/: render_review.py
tests/fixtures/cheesetest/: scene_01_manifest.json  scene_02_manifest.json  scene_03_manifest.json  scene_04_manifest.json  scene_05_manifest.json  scene_06_manifest.json
tests/fixtures/entry_validation_review/: render_review.py
tests/fixtures/majo_review/: render_calibration.py  render_calibration_nod_v2.py  render_round1.py  render_round1_revised.py  render_round2.py  round_1_manifest.json  test_512.json
